[project]
name = "llm_conversation"  # The pip install <name>.
version = "0.2.0"
description = "A simple creator for conversations that are designed to be ingested by LLMs."
readme = "README.md"
authors = [{ name = "Eric Apgar" }]
urls = { "Homepage" = "https://github.com/EricApgar/llm-conversation" }
requires-python = "~=3.12.0"

dependencies = []

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[tool.setuptools]
package-dir = {"" = "src"}  # Important that this folder is the name of the folder where all the files sit under.

[tool.setuptools.packages.find]
where = ["src"]
# include = ["llm_conversation*"]  # The import <name>. Defined by the name of the folder under src.